Created recipe page content for pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,5 +8,34 @@
 </head>
 <body>
     <h1>Black Truffle Pizza</h1>
+    <figure>
+        <img src="pizza.jpg" alt="Three truly delicious pizzas" width="640px" height="423.5px">
+        <figcaption>Three truly delicious pizzas</figcaption>
+    </figure>
+    <h2>Description</h2>
+    <p>Our homemade pizza is the best in town, as all ingredients are fresh and sourced regionally from our own farms in the countryside.
+        <br>
+    Not convinced? Come try our pizza yourself.
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>125ml lukewarm water</li>
+        <li>7g white-sugar</li>
+        <li>3.5g active dry-yeast</li>
+        <li>1 pinch salt</li>
+        <li>10g native virgin olive oil</li>
+        <li>230g bread flour</li>
+        <li>120g freshly-grated mozarella cheese</li>
+        <li>tasty tomatoe sauce</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Dissolve sugar in water</li>
+        <li>Add active dry yeast and let it for a couple of minutes</li>
+        <li>Add flour, olive oil and salt, and combine it into a smooth dough</li>
+        <li>Cover it with a kitchen towel and let it rest for 1 hour in a warm and dark place</li>
+        <li>Roll out dough and add remaining ingredients</li>
+        <li>Bake for 10-15 min in a pre-heated oven at 200°C</li>
+    </ol>
 </body>
 </html>
