created two more recipe pages: pasta.html and panzerotti.html; added image to index.html and basic navigational links on the bottom of each recipe page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="pizza.html" target="_blank" rel="noopener noreferrer">Black Truffle Pizza Recipe</a>
+    <figure>
+        <img src="/images/odinsRestaurant.jpg" alt="Selection of fresh ingredients that a used by Odin for his amazing recipes" width="640" height="auto">
+        <figcaption>Selection of fresh ingredients that a used by Odin for his amazing recipes</figcaption>
+    </figure>
+    <ul>
+        <li>
+            <a href="/recipes/pizza.html">Pizza</a>
+        </li>
+        <li>
+            <a href="/recipes/pasta.html">Pasta</a>
+        </li>
+        <li>
+            <a href="/recipes/panzerotti.html">Panzerotti</a>
+        </li>
+    </ul>
 </body>
 </html>
