--- a/recipes/panzerotti.html
+++ b/recipes/panzerotti.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza by Odin</title>
+    <title>Panzerotti by Odin</title>
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1>Panzerotti</h1>
     <figure>
-        <img src="/images/pizza.jpg" alt="Three truly delicious pizzas" width="640" height="423">
-        <figcaption>Three truly delicious pizzas</figcaption>
+        <img src="/images/panzerotti.jpg" alt="Three fresh Panzerotti on a storefront counter" width="640" height="auto">
+        <figcaption>Three fresh Panzerotti on a storefront counter</figcaption>
     </figure>
+
+    <h2>What are Panzerotti?</h2>
+    <p>A <strong>panzerotto</strong> (plural panzerotti, also known as <strong>panzarotto</strong>), is a savory turnover that originated in Central and Southern Italian cuisine which resembles a small calzone, both in shape and dough used for its preparation. The term usually applies to a fried turnover rather than an oven-baked pastry (i.e. a calzone), though <em>calzoni</em> and <em>panzerotti</em> are often mistaken for each other.</p>
+
     <h2>Description</h2>
-    <p>Our homemade pizza is the best in town, as all ingredients are fresh and sourced regionally from our own farms in the countryside.
-        <br>
-    Not convinced? Come try our pizza yourself.
-    </p>
+    <p>Our panzerotti are always <strong>fresh</strong> and <strong>deep-fried</strong> in front of your eyes.<br>Don't hesitate to ask us for <strong>additional ingedrients</strong>, such as <em>mushrooms</em> or <em>bacon pieces</em>.</p>
+
     <h3>Ingredients</h3>
     <ul>
         <li>125ml lukewarm water</li>
@@ -37,7 +39,7 @@
         <li>Roll out dough and add remaining ingredients</li>
         <li>Bake for 10-15 min in a pre-heated oven at 200°C</li>
     </ol>
-    <h4><a href="/recipes/pasta.html">Previous Recipe</a> | <a href="/recipes/panzerotti.html">Next Recipe</a></h4>
+    <h4><a href="/recipes/pasta.html">Previous Recipe</a> | <a href="/recipes/pizza.html">Next Recipe</a></h4>
     <h4><a href="/index.html">Back to Main Menu</a></h4>
 </body>
 </html>
