--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <body>
     <h1>Odin Recipes</h1>
     <figure>
-        <img src="/images/odinsRestaurant.jpg" alt="Selection of fresh ingredients that a used by Odin for his amazing recipes" width="640" height="auto">
+        <img src="../images/odinsRestaurant.jpg" alt="Selection of fresh ingredients that a used by Odin for his amazing recipes" width="640" height="auto">
         <figcaption>Selection of fresh ingredients that a used by Odin for his amazing recipes</figcaption>
     </figure>
     <ul>
         <li>
-            <a href="/recipes/pizza.html">Pizza</a>
+            <a href="../recipes/pizza.html">Pizza</a>
         </li>
         <li>
-            <a href="/recipes/pasta.html">Pasta</a>
+            <a href="../recipes/pasta.html">Pasta</a>
         </li>
         <li>
-            <a href="/recipes/panzerotti.html">Panzerotti</a>
+            <a href="../recipes/panzerotti.html">Panzerotti</a>
         </li>
     </ul>
 </body>
