--- a/recipes/panzerotti.html
+++ b/recipes/panzerotti.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Panzerotti</h1>
     <figure>
-        <img src="/images/panzerotti.jpg" alt="Three fresh Panzerotti on a storefront counter" width="640" height="auto">
+        <img src="../images/panzerotti.jpg" alt="Three fresh Panzerotti on a storefront counter" width="640" height="auto">
         <figcaption>Three fresh Panzerotti on a storefront counter</figcaption>
     </figure>
 
@@ -39,7 +39,7 @@
         <li>Roll out dough and add remaining ingredients</li>
         <li>Bake for 10-15 min in a pre-heated oven at 200°C</li>
     </ol>
-    <h4><a href="/recipes/pasta.html">Previous Recipe</a> | <a href="/recipes/pizza.html">Next Recipe</a></h4>
+    <h4><a href="../recipes/pasta.html">Previous Recipe</a> | <a href="../recipes/pizza.html">Next Recipe</a></h4>
     <h4><a href="/index.html">Back to Main Menu</a></h4>
 </body>
 </html>
