--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pizza</h1>
     <figure>
-        <img src="../images/pizza.jpg" alt="Three truly delicious pizzas" width="640" height="423">
+        <img src="./images/pizza.jpg" alt="Three truly delicious pizzas" width="640" height="423">
         <figcaption>Three truly delicious pizzas</figcaption>
     </figure>
     <h2>Description</h2>
@@ -37,7 +37,7 @@
         <li>Roll out dough and add remaining ingredients</li>
         <li>Bake for 10-15 min in a pre-heated oven at 200°C</li>
     </ol>
-    <h4><a href="../recipes/pasta.html">Previous Recipe</a> | <a href="../recipes/panzerotti.html">Next Recipe</a></h4>
+    <h4><a href="./recipes/pasta.html">Previous Recipe</a> | <a href="./recipes/panzerotti.html">Next Recipe</a></h4>
     <h4><a href="/index.html">Back to Main Menu</a></h4>
 </body>
 </html>
