--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pasta</h1>
     <figure>
-        <img src="./images/pasta.jpg" alt="A plate of freshly-prepared pasta with parmesan cheese and some basil leaves" width="640" height="auto">
+        <img src="../images/pasta.jpg" alt="A plate of freshly-prepared pasta with parmesan cheese and some basil leaves" width="640" height="auto">
         <figcaption>A plate of freshly-prepared pasta with parmesan cheese and some basil leaves</figcaption>
     </figure>
 
@@ -39,7 +39,7 @@
         <li>Roll out dough and add remaining ingredients</li>
         <li>Bake for 10-15 min in a pre-heated oven at 200°C</li>
     </ol>
-    <h4><a href="./recipes/pizza.html">Previous Recipe</a> | <a href="./recipes/panzerotti.html">Next Recipe</a></h4>
-    <h4><a href="/index.html">Back to Main Menu</a></h4>
+    <h4><a href="../recipes/pizza.html">Previous Recipe</a> | <a href="../recipes/panzerotti.html">Next Recipe</a></h4>
+    <h4><a href="../index.html">Back to Main Menu</a></h4>
 </body>
 </html>
